# leo-ml

./: .gitignore  LICENSE  README.md  requirements.txt
data/: con_df.pkl  converted_labels.pkl  converted_labels_comms.pkl  converted_labels_rfi2.pkl  converted_labels_scint.pkl  converted_labels_scint_v2.pkl  labeled_profile_list.csv  labeled_profile_list_Ann.xlsx  scint_events_chang.txt
data/read_spire_comms/: parse_comms.ipynb
notebooks/: README.md  comms_rfi.ipynb  label_ro_nb.ipynb  ml-pipeline-comms.ipynb  ml-pipeline-multi.ipynb  ml-pipeline-scint.ipynb  ml-pipeline.ipynb  more_rfi_samples.ipynb  more_scint_samples.ipynb  navigation_2024_manuscript.ipynb  plot_prof_distr.ipynb  results.txt  ro-comms-overlap.ipynb  test_all_spire.ipynb  updates_ann.ipynb  view_ro_for_labels.ipynb
scripts/: feature_extract_util.py  gnss-ro-distr.py  ml_models.py  ml_util.py  scnPhs_viz.py
src/: pyproject.toml
src/gnssroML/: gnss-r-data.py  gnss-ro-data.py  make_feature_sets_all_data.py  make_fs_all_data_v2.py  make_label_plots.py  ml_models.py  ml_util.py  read_nc_meta.py
